--- a/Signal/translations/ar.lproj/Localizable.strings
+++ b/Signal/translations/ar.lproj/Localizable.strings
@@ -299,7 +299,7 @@
 "ARCHIVE_ACTION" = "أرشفة";
 
 /* Button to try to join a call. The admin may need to approve the request before the user can join. */
-"ASK_TO_JOIN_CALL" = "Ask to Join Call";
+"ASK_TO_JOIN_CALL" = "اطلب الانضمام للمكالمة";
 
 /* One of the choices for pre-defined aspect ratio of a photo in media editor. */
 "ASPECT_RATIO_ORIGINAL" = "أصلي";
@@ -788,7 +788,7 @@
 "CALL_VIEW_UNMUTE_LABEL" = "إعادة الصوت";
 
 /* Shown in the header below the name of the call while waiting for the host to allow you to enter the call. */
-"CALL_WAITING_TO_BE_LET_IN" = "Waiting to be let in…";
+"CALL_WAITING_TO_BE_LET_IN" = "في انتظار السماح بالانضمام…";
 
 /* notification action */
 "CALLBACK_BUTTON_TITLE" = "إعادة الاتصال";
@@ -1792,14 +1792,11 @@
 /* Toast message confirming the system contact was deleted. Embeds {{The name of the user who was deleted.}}. */
 "DELETE_CONTACT_CONFIRMATION_TOAST" = "حُذف %1$@ من جهات اتصالك وأُزيل.";
 
+/* Title for an action sheet button explaining that a message will be deleted. */
+"DELETE_FOR_ME_NOTE_TO_SELF_ACTION_SHEET_BUTTON_TITLE" = "Delete";
+
 /* Header text for an action sheet confirming deleting a message in Note to Self. */
 "DELETE_FOR_ME_NOTE_TO_SELF_ACTION_SHEET_HEADER" = "أَتريد حذف الرسالة؟";
-
-/* Title for an action sheet button explaining that a message will be deleted. */
-"DELETE_FOR_ME_NOTE_TO_SELF_LINKED_DEVICES_NOT_PRESENT_ACTION_SHEET_BUTTON_TITLE" = "حذف";
-
-/* Title for an action sheet button explaining that a message will be deleted. */
-"DELETE_FOR_ME_NOTE_TO_SELF_LINKED_DEVICES_PRESENT_ACTION_SHEET_BUTTON_TITLE" = "حذف بالنسبة لي";
 
 /* Subheader for an action sheet explaining that a Note to Self deleted on this device will be deleted on the user's other devices as well. */
 "DELETE_FOR_ME_NOTE_TO_SELF_LINKED_DEVICES_PRESENT_ACTION_SHEET_SUBHEADER" = "سَيتم حذف هذه الرسالة من كل أجهزتك.";
@@ -7166,7 +7163,7 @@
 "SHOW_THREAD_BUTTON_TITLE" = "إظهار الدردشة";
 
 /* Shown in the header when the user hasn't provided a custom name for a call. */
-"SIGNAL_CALL" = "Signal Call";
+"SIGNAL_CALL" = "مكالمة سيجنال";
 
 /* body sent to contacts when inviting to Install Signal */
 "SMS_INVITE_BODY" = "أنا أدعوك لتثبيت تطبيق سيجنال! ها هو الرابط:";
