--- a/Signal/translations/es.lproj/InfoPlist.strings
+++ b/Signal/translations/es.lproj/InfoPlist.strings
@@ -1,9 +1,9 @@
 NSAppleMusicUsageDescription = "Signal necesita usar Apple Music para reproducir los archivos multimedia adjuntos.";
 NSCameraUsageDescription = "Signal usa tu cámara para hacer fotos y videollamadas.";
-NSContactsUsageDescription = "Signal usa tu lista de contactos para encontrar personas que conoces que usen Signal. No guardamos tus contactos en nuestros servidores.";
+NSContactsUsageDescription = "Signal usa tu lista de contactos para encontrar personas que ya usan Signal. No guardamos tus contactos en nuestros servidores.";
 NSFaceIDUsageDescription = "Signal usa Face ID para activar el bloqueo de pantalla.";
 NSLocationWhenInUseUsageDescription = "Signal necesita acceso a tu ubicación para que puedas compartir tu ubicación actual.";
-NSMicrophoneUsageDescription = "Signal necesita acceso a tu micrófono para iniciar y atender llamadas y para grabar mensajes de voz.";
+NSMicrophoneUsageDescription = "Signal necesita acceso a tu micrófono para hacer y atender llamadas y para grabar mensajes de voz.";
 NSPhotoLibraryAddUsageDescription = "Signal guardará fotos en tu fototeca.";
 NSPhotoLibraryUsageDescription = "Signal te permitirá seleccionar las fotos que desees enviar.";
 NSLocalNetworkUsageDescription = "Signal usa la red local para permitir transferir tu cuenta directamente a tu teléfono nuevo. El acceso a la red local solamente se usará en el momento en que decidas transferir tu cuenta a un nuevo dispositivo.";
